# VietLawQAChat

./: .gitignore  LICENSE  README.md  USAGE.md  environment.yml  pyproject.toml  test.ipynb
app/: config.py  index_cache.py  main.py  schemas.py
app/static/: app.js  index.html  style.css
configs/app/: _smoke_tiny.yaml  app.yaml  pipeline.yaml
configs/baseline-selection/: bm25-non-seg.yaml  bm25-pyvi-seg.yaml  bm25plus-non-seg.yaml  bm25plus-pyvi-seg.yaml  tfidf-non-seg.yaml  tfidf-pyvi-seg.yaml
configs/data/: full.yaml  negative_mining.yaml  non-seg.yaml  pyvi-seg.yaml  underthesea-seg.yaml
configs/dense-selection/: e5-base.yaml  embeddinggemma-300m.yaml  granite-97m.yaml  vietnamese-bi-encoder.yaml
configs/hybrid-tuning/: hybrid_sweep.yaml
configs/model-selection/: embeddinggemma-300m.yaml  f2llm-v2-160m.yaml  f2llm-v2-330m.yaml  granite-embedding-311m-multilingual-r2.yaml  granite-embedding-97m-multilingual-r2.yaml  harrier-oss-v1-270m.yaml  multilingual-e5-base.yaml  phobert-base-v2.yaml  phobert-base.yaml  phobert-large.yaml  vietnamese-bi-encoder.yaml
configs/pipeline/: biencoder_pretrained+crossencoder.yaml  biencoder_pretrained.yaml  biencoder_trained+crossencoder_pretrained.yaml  biencoder_trained+crossencoder_trained.yaml  biencoder_trained.yaml  bm25_only.yaml  hybrid_bm25+dense_pretrained.yaml  (+3 more)
data/: .gitignore  visualize.ipynb
final report/: 00_master_checklist.md  README.md
results/: scores.json
scripts/: mine_negatives.py  process_data.py  run_pipeline.py  serve_app.py  train_bi.py  train_cross.py  tune_hybrid.py  update_batch_size.py
(+143 files in other folders)
