[project]
name = "vnlegal-rag-v2"
version = "0.1.0"
description = "Modular RAG framework for Vietnamese legal data"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "pyvi",
    "underthesea",
    "sentence-transformers>=2.6.0",
    "bm25s",
    "faiss-cpu",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.10",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["vnlegal_rag_v2*", "app*"]